--- a/about-me.html
+++ b/about-me.html
@@ -4,8 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/about-me.css">
+    <script>
+        (function (d) {
+            var config = {
+                kitId: 'xdf6izq',
+                scriptTimeout: 3000,
+                async: true
+            },
+                h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
+        })(document);
+    </script>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/about-me.css">
     <title>わたしのこと</title>
 </head>
 
@@ -14,10 +24,10 @@
         <div class="header_container">
             <nav class="header_nav">
                 <ul>
-                    <li><a href="#about-me">わたしのこと</a></li>
-                    <li><a href="#works">おしごと</a></li>
+                    <li><a href="./about-me.html">わたしのこと</a></li>
+                    <li><a href="./index.html#works">おしごと</a></li>
                     <li><a href="mailto:aki.n218@gmail.com?subject=お問い合わせ&body=こちらにメッセージをご記入ください。"><img
-                                src="../images/header-contact-btn.png" alt="ヘッダー問合せボタン" /></a></li>
+                                src="./images/header-contact-btn.png" alt="ヘッダー問合せボタン" /></a></li>
                 </ul>
             </nav>
         </div>
@@ -30,11 +40,11 @@
     <section id="profile">
         <div class="profile_top_wrapper">
             <div class="profile_photo">
-                <img src="../images/profilephoto.png" alt="自分の写真" />
+                <img src="./images/profilephoto.png" alt="自分の写真" />
             </div>
             <div class="profile_info">
                 <div class="profile_logo">
-                    <img src="../images/logo.png" alt="ロゴデザイン" />
+                    <img src="./images/logo.png" alt="ロゴデザイン" />
                     <p>ウミイロデザイン</p>
                 </div>
                 <div class="name">
@@ -45,7 +55,7 @@
         </div>
         <div class="profile_main_wrapper">
             <div class="main_photo">
-                <img src="../images/profilephoto2.jpg" alt="プロフィール写真２" />
+                <img src="./images/profilephoto2.jpg" alt="プロフィール写真２" />
             </div>
             <div class="profile_text">
                 <ul>
@@ -86,15 +96,22 @@
     </div>
 
 
+    <!-- フッター -->
     <footer>
         <div class="site_footer_wrapper">
-            <p>お仕事のご相談はこちらから</p>
-            <img src="../images/mail_icon.png" alt="問合せロゴ" />
+            <div class="footer_contact">
+                <p class="footer_contact_text">お仕事のご相談はこちらから</p>
+            </div>
+            <div class="footer_contact_btn">
+                <a href="mailto:aki.n218@gmail.com?subject=お問い合わせ&body=こちらにメッセージをご記入ください。"><img
+                        src="./images/header-contact-btn.png" alt="ヘッダー問合せボタン" /></a>
+            </div>
+            <div class="site_footer_logo">
+                <a href="../index.html#main_view">
+                    <img src="./images/logo.png" alt="umiro designロゴ" />
+                </a>
+            </div>
         </div>
-        <div class="site_footer_logo">
-            <img src="../images/logo.png" alt="umiro designロゴ" />
-        </div>
-
     </footer>
 </body>
 
