--- a/about-me.html
+++ b/about-me.html
@@ -60,25 +60,25 @@
             <div class="profile_text">
                 <ul>
                     <li><span class="about">すむところ</span>
-                        <p>埼玉県深谷市在住</p>
+                        <p class="about_text">埼玉県深谷市在住</p>
                     </li>
                     <li><span class="about">しごと</span>
-                        <p>IT企業の在宅ワーカー<br>兼シンママ</p>
+                        <p class="about_text">IT企業の在宅ワーカー<br>兼シンママ</p>
                     </li>
                     <li><span class="about">前のしごと</span>
-                        <p>TOEIC660点<br>日商簿記検定3級（2級も勉強中）<br>整理収納アドバイザー検定3級</p>
+                        <p class="about_text">TOEIC660点<br>日商簿記検定3級（2級も勉強中）<br>整理収納アドバイザー検定3級</p>
                     </li>
                     <li><span class="about">しかく</span>
-                        <p>株式会社良品計画に8年間兼務<br>無印良品の店長、改装などを経験</p>
+                        <p class="about_text">株式会社良品計画に8年間兼務<br>無印良品の店長、改装などを経験</p>
                     </li>
                     <li><span class="about">しゅみ</span>
-                        <p>Youtubeを観ること、ドラマを観ること<br>子どもと遊ぶこと</p>
+                        <p class="about_text">Youtubeを観ること、ドラマを観ること<br>子どもと遊ぶこと</p>
                     </li>
                     <li><span class="about">すきなこと</span>
-                        <p>TOKYO MERの大ファン<br>ケツメイシのファン歴20年<br>お酒<br>ディズニー</p>
+                        <p class="about_text">TOKYO MERの大ファン<br>ケツメイシのファン歴20年<br>お酒<br>ディズニー</p>
                     </li>
                     <li><span class="about">つかえるソフト</span>
-                        <p>Google Workplace、Microsoft Office<br>Zoom、Google
+                        <p class="about_text">Google Workplace、Microsoft Office<br>Zoom、Google
                             meet、Teams、Slack<br>ChatWork、NotebookLM<br>Adobe＊Photoshop、Illustrator、Acrobat<br>Canva、VScode、Github<br>ChatGPT、Gemini、ClaudeAI、gamma
                         </p>
                     </li>
