--- a/works/works_designcafe..html
+++ b/works/works_designcafe..html
@@ -24,8 +24,8 @@
         <div class="header_container">
             <nav class="header_nav">
                 <ul>
-                    <li><a href="./about-me.html">わたしのこと</a></li>
-                    <li><a href="./index.html#works">おしごと</a></li>
+                    <li><a href="../about-me.html">わたしのこと</a></li>
+                    <li><a href="../index.html#works">おしごと</a></li>
                     <li><a href="mailto:aki.n218@gmail.com?subject=お問い合わせ&body=こちらにメッセージをご記入ください。"><img
                                 src="../images/header-contact-btn.png" alt="ヘッダー問合せボタン" /></a></li>
                 </ul>
