--- a/works/works_designcafe..html
+++ b/works/works_designcafe..html
@@ -22,6 +22,9 @@
 <body>
     <header>
         <div class="header_container">
+            <div class="hamburger">
+                <span></span>
+            </div>
             <nav class="header_nav">
                 <ul>
                     <li><a href="../about-me.html">わたしのこと</a></li>
@@ -29,6 +32,14 @@
                     <li><a href="mailto:aki.n218@gmail.com?subject=お問い合わせ&body=こちらにメッセージをご記入ください。"><img
                                 src="../images/header-contact-btn.png" alt="ヘッダー問合せボタン" /></a></li>
                 </ul>
+            </nav>
+            <nav class="header_nav_sp">
+                <ul>
+                    <li><a href="../index.html#about-me">わたしのこと</a></li>
+                    <li><a href="../index.html#works">おしごと</a></li>
+                    <li><a href="mailto:aki.n218@gmail.com?subject=お問い合わせ&body=こちらにメッセージをご記入ください。">といあわせ</a></li>
+                </ul>
+                <img src="../images/nav_sp_tori.png" alt="ロゴの鳥" />
             </nav>
         </div>
     </header>
@@ -106,6 +117,16 @@
             </div>
         </div>
     </footer>
+    <script>
+        // ハンバーガー
+        const hamburger = document.querySelector('.hamburger');
+        const navSp = document.querySelector('.header_nav_sp');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navSp.classList.toggle('active');
+        });
+    </script>
 </body>
 
 
