--- a/works/works_hairsalon.html
+++ b/works/works_hairsalon.html
@@ -22,13 +22,24 @@
 <body>
     <header>
         <div class="header_container">
+            <div class="hamburger">
+                <span></span>
+            </div>
             <nav class="header_nav">
                 <ul>
-                    <li><a href="./about-me.html">わたしのこと</a></li>
-                    <li><a href="./index.html#works">おしごと</a></li>
+                    <li><a href="../about-me.html">わたしのこと</a></li>
+                    <li><a href="../index.html#works">おしごと</a></li>
                     <li><a href="mailto:aki.n218@gmail.com?subject=お問い合わせ&body=こちらにメッセージをご記入ください。"><img
-                                src="./images/header-contact-btn.png" alt="ヘッダー問合せボタン" /></a></li>
+                                src="../images/header-contact-btn.png" alt="ヘッダー問合せボタン" /></a></li>
                 </ul>
+            </nav>
+            <nav class="header_nav_sp">
+                <ul>
+                    <li><a href="../index.html#about-me">わたしのこと</a></li>
+                    <li><a href="../index.html#works">おしごと</a></li>
+                    <li><a href="mailto:aki.n218@gmail.com?subject=お問い合わせ&body=こちらにメッセージをご記入ください。">といあわせ</a></li>
+                </ul>
+                <img src="../images/nav_sp_tori.png" alt="ロゴの鳥" />
             </nav>
         </div>
     </header>
@@ -42,9 +53,9 @@
     <section id="works">
         <div class="works_wrapper">
             <div class="works_topimage">
-                <img src="../images/designcafe_moc.jpg" alt="デザインカフェ" />
+                <img src="../images/life_hairdesign_moc.jpg" alt="デザインカフェ" />
             </div>
-            <h3 class="hp_works_title">Design Cafe HP制作</h3>
+            <h3 class="hp_works_title">Hair Salon HP制作</h3>
             <div class="hp_works_wrapper">
                 <div class="hp_works_movie">
                     <video autoplay muted loop width=" 100%" height="auto">
@@ -54,29 +65,28 @@
                 <div class="hp_works_word">
                     <p class="hp_works__q">概要</p>
                     <p class="hp_works__a">
-                        スクール課題であるカフェのサイトのLPを制作しました。おしゃれな空間とこだわりのコーヒーを楽しみたい20〜30代の女性や、落ち着いた環境でリモートワークや勉強をしたい社会人・学生を想定。インテリアや空間デザインに敏感で、SNSでシェアしたくなる体験を求める層をターゲットにしています。
+                        スクール課題である美容室のサイトのHPデザインを制作しました。ロゴの六角形を生かして画像や、全体的なデザインを単純な四角でおかず、少し変化を持たせ、ロゴカラーのピンクを要所要所に取り入れながらイメージを伝えました。HPも見ていて楽しい！と思ってもらえるようなデザインを制作しました。
                     </p>
                     <p class="hp_works__q">制作範囲</p>
-                    <p class="hp_works__a">デザイン/コーディング</p>
+                    <p class="hp_works__a">デザイン</p>
                     <p class="hp_works__q">制作期間</p>
-                    <p class="hp_works__a">企画/情報設計/WF :1週間<br>デザイン:1週間<br>コーディング:1週間</p>
+                    <p class="hp_works__a">企画/情報設計/WF :1週間<br>デザイン:1週間</p>
                 </div>
             </div>
             <div class="works_column">
                 <p class="works_topic">ターゲット</p>
-                <p class="works_text">20代後半-40代のビジネスマン
+                <p class="works_text">20代後半-40代の女性
                 </p>
             </div>
             <div class="works_column">
                 <p class="works_topic">目的</p>
-                <p class="works_text">カフェの認知、メニュー、こだわりを伝える
+                <p class="works_text">美容室の雰囲気、特徴、一通りの情報がわかる場所が伝わる
                 </p>
             </div>
             <div class="works_column">
                 <p class="works_topic">こだわり</p>
                 <p class="works_text">
-                    コーヒー、店内の雰囲気を創出させるような、ブラウン調のイメージで統一しました。マップも通常のマップからダークトーンに変更し、統一感を出しています。サイト内回遊性を重要視し、固定ボタンの設置もしています。
-                </p>
+                    画像はただの四角形だけでなく、ロゴの形を意識した設計に。ロゴマークをメニュー表示にも使用し、統一感を演出。サロンの雰囲気は、ファーストビューで伝わるよう、スライド式で何枚か見れるようにしています。
             </div>
     </section>
     <!-- 波 -->
@@ -104,6 +114,16 @@
             </div>
         </div>
     </footer>
+    <script>
+        // ハンバーガー
+        const hamburger = document.querySelector('.hamburger');
+        const navSp = document.querySelector('.header_nav_sp');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navSp.classList.toggle('active');
+        });
+    </script>
 </body>
 
 
