--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
                     <div class="lp_imageblock">
                         <a href="./works/works_designcafe..html">
-                            <p>◀︎Design Cafe HP</p>
+                            <p>Design Cafe HP</p>
                         </a>
                         <a href="./works/works_designcafe..html"><img src="./images/designcafe_moc.png"
                                 alt="モックアップ1" /></a>
@@ -159,7 +159,7 @@
                 <div class="lp_works_scroll">
                     <div class="lp_imageblock">
                         <a href="./works/works_workers.html">
-                            <p>Workers LP Design▶︎</p>
+                            <p>Workers LP Design</p>
                         </a>
                         <a href="./works/works_workers.html"><img src="./images/workers_moc.png" alt="モックアップ2" /></a>
 
@@ -178,7 +178,7 @@
                     </div>
                     <div class="lp_imageblock">
                         <a href="./works/works_designcafe..html">
-                            <p>◀︎Hair Salon HP</p>
+                            <p>Hair Salon HP</p>
                         </a>
                         <a href="./works/works_hairsalon.html"><img src="./images/designcafe_moc.png"
                                 alt="モックアップ1" /></a>
