--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -174,14 +174,14 @@
                 <div class="lp_works_scroll">
                     <div class="lp_movieblock">
                         <video autoplay muted loop width=" 100%" height="auto">
-                            <source src="./movies/designcafe_movie.mov" type="video/mp4">
+                            <source src="./movies/life_hairdesign_movie.mov" type="video/mp4">
                         </video>
                     </div>
                     <div class="lp_imageblock">
-                        <a href="./works/works_designcafe..html">
+                        <a href="./works/works_hairsalon.html">
                             <p>Hair Salon HP</p>
                         </a>
-                        <a href="./works/works_hairsalon.html"><img src="./images/designcafe_moc.png"
+                        <a href="./works/works_hairsalon.html"><img src="./images/life_hair_moc.png"
                                 alt="モックアップ1" /></a>
                     </div>
                 </div>
